# kun-game

./: CMakeLists.txt  CMakeSettings.json  README.md
report/: .gitignore  main.tex
report/snippets/: canvas_class.cpp  menu_view_class.cpp  screen_class.cpp  size_class.cpp  start_game.cpp  view_class.cpp
src/: game.cpp  game.h  main.cpp
src/core/: battle_spirit.h  enermy.h  game.cpp  game.h  pet.h
src/engine/: canvas.h  engine.h  input_view.h  menu.h  menu_view.h  notice_view.h  screen.h  text_view.h  types.h  view.cpp  view.h
src/game/: game.cpp
src/game/views/: about_view.h  loading_view.h  main_view.h  sub_view.h  test_view.h
src/utils/: encoding.cpp  encoding.h  random.cpp  random.h
src/views/: about_view.h  battle_view.h  enermy_view.h  game_dashboard_view.h  loading_view.h  main_view.h  notice_view.h  pet_mixin.h  shop_view.h  start_game_view.h  test_view.h
